<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_name">AntiSplit-G2</string>
    <string name="choose_file">Select a file</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="file_zip">File (*.apks *.zip *.xapk)</string>
    <string name="help">Help</string>
    <string name="merge">Merge</string>
    <string name="module_is_installed">ApkMirror module is installed</string>
    <string name="module_name">ApkMirror</string>
    <string name="module_not_installed">ApkMirror module not installed</string>
    <string name="pref_extract_native_header">Native Library Compression</string>
    <string name="pref_extract_native_summ_off">Compression OFF</string>
    <string name="pref_extract_native_summ_on">Compression ON</string>
    <string name="pref_extract_native_title">Compression</string>
    <string name="pref_lang_enable">Language</string>
    <string name="pref_lang_header">Copy only language (experimental)</string>
    <string name="pref_lang_only_lang">Only Language</string>
    <string name="pref_lang_split">Anti Split</string>
    <string name="pref_language_key">Language code</string>
    <string name="pref_language_key_summary">Language code</string>
    <string name="pref_mismatching_packages_header">Mismatched packages or versions</string>
    <string name="pref_mismatching_packages_summ_off">Disable</string>
    <string name="pref_mismatching_packages_summ_on">Enable</string>
    <string name="pref_mismatching_packages_title">Build from different packages or versions</string>
    <string name="pref_module_header">Optional Module</string>
    <string name="pref_module_summ_off">Skip module files</string>
    <string name="pref_module_summ_on">Add module files in apk</string>
    <string name="pref_module_title">Module</string>
    <string name="pref_sign_header">Sign APK</string>
    <string name="pref_sign_summ_off">Signing disabled</string>
    <string name="pref_sign_summ_on">Signing enabled</string>
    <string name="pref_sign_title">Sign with test signature</string>
    <string name="settings">Settings</string>
    <string name="textview">Log</string>
    <string name="title_apkmirror">Decrypt ApkMirror</string>
    <string name="title_choose">Choose</string>
</resources>
