<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_sign_header">
        <CheckBoxPreference android:title="@string/pref_sign_title" android:key="signEnable" android:defaultValue="true" android:summaryOn="@string/pref_sign_summ_on" android:summaryOff="@string/pref_sign_summ_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_module_header">
        <CheckBoxPreference android:title="@string/pref_module_title" android:key="moduleEnable" android:defaultValue="false" android:summaryOn="@string/pref_module_summ_on" android:summaryOff="@string/pref_module_summ_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_extract_native_header">
        <CheckBoxPreference android:title="@string/pref_extract_native_title" android:key="extractNativeLibsEnable" android:defaultValue="false" android:summaryOn="@string/pref_extract_native_summ_on" android:summaryOff="@string/pref_extract_native_summ_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_mismatching_packages_header">
        <CheckBoxPreference android:title="@string/pref_mismatching_packages_title" android:key="mismatchingPackagesEnable" android:defaultValue="false" android:summaryOn="@string/pref_mismatching_packages_summ_on" android:summaryOff="@string/pref_mismatching_packages_summ_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_lang_header">
        <CheckBoxPreference android:title="@string/pref_lang_enable" android:key="languageEnable" android:defaultValue="false" android:summaryOn="@string/pref_lang_only_lang" android:summaryOff="@string/pref_lang_split" />
        <EditTextPreference android:title="@string/pref_language_key" android:key="languageCode" android:summary="@string/pref_language_key_summary" android:defaultValue="ru" />
    </PreferenceCategory>
</PreferenceScreen>