<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/editText1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/file_zip" android:inputType="none" android:layout_marginEnd="36.0dip" />
    <ImageButton android:gravity="center_horizontal" android:id="@id/select" android:background="@drawable/ic_folder" android:padding="4.0dip" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_alignEnd="@id/editText1" android:layout_alignParentEnd="true" />
    <Button android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/merge" android:layout_below="@id/editText1" />
    <ProgressBar android:id="@id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:elevation="7.0dip" style="?android:progressBarStyleLarge" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/button">
        <HorizontalScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:typeface="monospace" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/textview" android:textIsSelectable="true" android:fontFamily="monospace" />
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>